argocd/applications/openrsvp/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openrsvp
  namespace: prod-openrsvp
spec:
  selector:
    app.kubernetes.io/name: openrsvp
  ports:
    - port: 8080
      targetPort: 8080
      name: http
